--- a/sys/app/View/Layouts/default.html
+++ b/sys/app/View/Layouts/default.html
@@ -77,40 +77,30 @@ function onImgErr(elm) {
     <div class="sp_menu_box"></div>
     <nav>
       <ul id="menu" class="clearfix">
-        <?php if($strCategory == '行きます（国内）'): ?>
-        <li class="current"><a href="/item/category/行きます（国内）">行きます（国内）</a></li>
+        <?php if($strCategory == '素材'): ?>
+        <li class="current"><a href="/item/category/素材">素材</a></li>
         <?php else: ?>
-        <li><a href="/item/category/行きます（国内）">行きます（国内）</a></li>
+        <li><a href="/item/category/素材">素材</a></li>
         <?php endif; ?>
-        <?php if($strCategory == '行きます（海外）'): ?>
-        <li class="current"><a href="/item/category/行きます（海外）外">行きます（海外）</a></li>
+        <?php if($strCategory == '形状'): ?>
+        <li class="current"><a href="/item/category/形状">形状</a></li>
         <?php else: ?>
-        <li><a href="/item/category/行きます（海外）">行きます（海外）</a></li>
+        <li><a href="/item/category/形状">形状</a></li>
         <?php endif; ?>
-        <?php if($strCategory == '行きます（国内）'): ?>
-        <li class="current"><a href="/item/category/行きます（国内）">行きます（国内）</a></li>
+        <?php if($strCategory == '用途'): ?>
+        <li class="current"><a href="/item/category/用途">用途</a></li>
         <?php else: ?>
-        <li><a href="/item/category/あります（国内）">あります（国内）</a></li>
+        <li><a href="/item/category/用途">用途</a></li>
         <?php endif; ?>
-        <?php if($strCategory == 'あります（国内）'): ?>
-        <li class="current"><a href="/item/category/あります（海外）">あります（海外）</a></li>
+        <?php if($strCategory == '企業'): ?>
+        <li class="current"><a href="/item/category/企業">企業</a></li>
         <?php else: ?>
-        <li><a href="/item/category/あります（海外）">あります（海外）</a></li>
+        <li><a href="/item/category/企業">企業</a></li>
         <?php endif; ?>
-        <?php if($strCategory == 'さがしてます（国内）'): ?>
-        <li class="current"><a href="/item/category/さがしてます（国内）">さがしてます（国内）</a></li>
+        <?php if($strCategory == '場所'): ?>
+        <li class="current"><a href="/item/category/場所">場所</a></li>
         <?php else: ?>
-        <li><a href="/item/category/さがしてます（国内）">さがしてます（国内）</a></li>
-        <?php endif; ?>
-        <?php if($strCategory == 'さがしてます（海外）'): ?>
-        <li class="current"><a href="/item/category/さがしてます（海外）">さがしてます（海外）</a></li>
-        <?php else: ?>
-        <li><a href="/item/category/さがしてます（海外）">さがしてます（海外）</a></li>
-        <?php endif; ?>
-        <?php if($strCategory == 'その他'): ?>
-        <li class="current"><a href="/item/category/その他">その他</a></li>
-        <?php else: ?>
-        <li><a href="/item/category/その他">その他</a></li>
+        <li><a href="/item/category/場所">場所</a></li>
         <?php endif; ?>
       </ul>
     </nav>
@@ -173,15 +163,11 @@ function onImgErr(elm) {
         <a href="/item/category/"><h3 class="f20 mover border-radius">ジャンル一覧</h3></a>
         <div class="genre clearfix">
           <ul class="box_l pl10 categories">
-            <li><a href="/item/category/行きます（国内）">行きます（国内）</a></li>
-            <li><a href="/item/category/行きます（海外）">行きます（海外）</a></li>
-            <li><a href="/item/category/あります（国内）">あります（国内）</a></li>
-            <li><a href="/item/category/あります（海外）">あります（海外）</a></li>
-          <!--</ul>
-          <ul class="box_r pr10">-->
-            <li><a href="/item/category/さがしてます（国内）">さがしてます（国内）</a></li>
-            <li><a href="/item/category/さがしてます（海外）">さがしてます（海外）</a></li>
-            <li><a href="/item/category/その他">その他</a></li>
+            <li><a href="/item/category/素材">素材</a></li>
+            <li><a href="/item/category/形状">形状</a></li>
+            <li><a href="/item/category/用途">用途</a></li>
+            <li><a href="/item/category/企業">企業</a></li>
+            <li><a href="/item/category/場所">場所</a></li>
           </ul>
           <div class="clear"></div>
           <ul class="guide pl10">
