--- a/sys/app/View/Layouts/default.html
+++ b/sys/app/View/Layouts/default.html
@@ -56,7 +56,7 @@ function onImgErr(elm) {
         <p><a href="/"><img src="/img/logo.png" alt="<?php echo Configure::read('info.siteName'); ?>" class="header-logo" width="350"></a></p>
         <h1 class="header_top">CtoC・ECマッチングサイト構築CMS</h1>
         -->
-        <?php echo $HTML_HEADER_LOGO ?>
+        <?php echo $html_header_logo ?>
     </div>
     <?php if(!empty($loginname)): ?>
     <ul class="header_menu pt10">
@@ -149,7 +149,7 @@ function onImgErr(elm) {
       <div id="side" class="col-xs-12 col-sm-12 col-md-3 col-md-pull-9 mt40">
         <div class="side_header spnone">
           <div class="side_banner">
-            <p><!--<a href="#"><img src="/img/cm_01.png" alt="無料でデジタルフリマ" class="img-responsive"></a>--><?php echo $HTML_LEFT_TOP ?></p>
+            <p><!--<a href="#"><img src="/img/cm_01.png" alt="無料でデジタルフリマ" class="img-responsive"></a>--><?php echo $html_left_top ?></p>
             <p><a href="/cart" class="side_cart_btn">カートを見る</a></p>
             <p><a href="/mypage/item" class="side_exhibit_btn">商品を出品する</a></p>
           </div>
